# probectl

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .gitmessage  .golangci.yml  .mailmap  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  commitlint.config.mjs  go.mod  go.sum  go.work  go.work.sum
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
analyzer/: README.md  pyproject.toml
analyzer/netctl_analyzer/: __init__.py  __main__.py  emit.py  events.py  log.py  monitor.py  mrt.py  pipeline.py  rislive.py
analyzer/probectl_analyzer/: __init__.py  __main__.py  config.py  emit.py  events.py  log.py  mrt.py  pipeline.py  rislive.py  rpki.py
analyzer/tests/: mrt_fixtures.py  test_cli_and_pipeline.py  test_events.py  test_monitor.py  test_mrt.py  test_pipeline.py  test_property.py  test_rislive.py  test_rpki.py  test_smoke.py
browser-worker/: Dockerfile  README.md  package-lock.json  package.json  smoke.mjs  worker.mjs
docs/: admin.md  agent-overhead.md  agent_overhead_test.go  ai-authoring.md  ai-egress.md  ai-query.md  ai-quickstart.md  ai-rca.md  alerting.md  architecture.md  audit.md  backup_restore_results_test.go  bgp.md  browser-synthetic.md  byok.md  capacity.md  capacity_test.go  carbon.md  change-intel.md  chaos.md  ci-pipeline.md  compliance.md  configuration.md  configuration_test.go  data-retention.md  data_retention_test.go  dependency-policy.md  deploying-agents.md  development.md  device-telemetry.md  ebpf-agent.md  ebpf-feasibility.md  ecosystem-integrations.md  editions.md  endpoint-dem.md  fairness.md  features.md  finops.md  fips_evidence_test.go  flow.md  (+46 more)
ee/: README.md  doc.go
migrations/: 0001_baseline.sql  0002_tenancy_core.sql  0003_rbac.sql  0005_audit.sql  0006_placeholders.sql  0007_app_role.sql  0008_seed_default_tenant.sql  0009_agents_registry.sql  0010_tests_definition.sql  0011_alert_rules.sql  0012_incidents.sql  0013_sessions_rbac_seed.sql  0015_ai_feedback.sql  0016_mcp_tokens.sql  0017_change_events.sql  0018_scim_abac.sql  0019_siem_delivery.sql  0020_incident_integrations.sql  0022_metrics_cmdb_permissions.sql  0023_threat_permissions.sql  0024_provider_plane.sql  0025_tenant_isolation.sql  0026_metering.sql  0027_branding.sql  0029_lifecycle_grants.sql  0031_fairness.sql  0033_governance.sql  0034_diagnostics.sql  0035_remediation.sql  0036_test_allow_private.sql  0037_governance_ai_egress.sql  0039_ai_answers.sql  0040_mcp_tokens_rls.sql  0042_agent_revocation.sql  0046_otlp_tokens.sql  0047_rollouts.sql  0048_otlp_tokens_strict_rls.sql  0049_incident_threat_detections_idx.sql  0050_session_preferences.sql  0051_webhook_deliveries.sql  (+2 more)
pkg/: README.md
proto/: README.md
scripts/: add_spdx_headers.sh  airgap-bundle.sh  backup_clickhouse.sh  backup_postgres.sh  backup_restore_drill.sh  build-release-binaries.sh  check-test-clocks.sh  check_action_pins.sh  check_audit_verify_outputs.mjs  check_branch_protection.sh  check_clickhouse_restore_contract.sh  check_compose_image_contract.sh  check_cosign_wiring.sh  check_coverage.sh  check_crypto_imports.sh  check_dco.sh  check_docs_claims.sh  check_drill_evidence.sh  check_editions_imports.sh  check_enrollment_scoping.sh  check_fuzz_policy.sh  check_helm_hardening.sh  check_npm_audit_policy.mjs  check_openapi.sh  check_repo_hygiene.sh  check_secret_scan_history.sh  ci_pg_tls.sh  (+20 more)
(+1475 files in other folders)
