[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probectl-analyzer"
version = "0.0.0.dev0"
description = "probectl BGP analyzer — ingests public BGP collector data and emits probectl.bgp.events."
requires-python = ">=3.11"
dependencies = [
  "structlog==26.1.0",
]

[project.optional-dependencies]
# Exact pins (SUPPLY-002): the lock gate recompiles this with uv, so a `>=`
# range floats to the latest upstream release and makes requirements-dev.lock
# "stale" the moment pytest/ruff/etc. publish a new version — a recurring,
# time-bomb CI red unrelated to any code change. Pin to the vetted versions the
# lock already carries (and that ci.yml's lint-python installs) so resolution is
# deterministic; bump intentionally + regenerate the lock when upgrading.
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "ruff==0.15.16",
  "black==26.5.1",
  "hypothesis==6.155.2",
]

[tool.hatch.build.targets.wheel]
packages = ["probectl_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# U-094: coverage floor for the analyzer. Measured 94% with the suite as of
# the floor's introduction; 85 leaves variance margin. Ratchet UP only.
[tool.coverage.run]
source = ["probectl_analyzer"]

[tool.coverage.report]
show_missing = true
fail_under = 85
